--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,29 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="nav">
+    <ion-header>
+        <ion-toolbar>
+            <ion-title>Menu</ion-title>
+        </ion-toolbar>
+    </ion-header>
+    <ion-content>
+        <ion-list>
+            <button ion-item (click)="onRecipeBook()">
+                <ion-icon name="book" item-left></ion-icon>
+                Recipe Book
+            </button>
+            <button ion-item (click)="onSignUp()">
+                <ion-icon name="contact" item-left></ion-icon>
+                Sign Up
+            </button>
+            <button ion-item (click)="onSignIn()">
+                <ion-icon name="log-in" item-left></ion-icon>
+                Sign In
+            </button>
+            <button ion-item (click)="onLogout()">
+                <ion-icon name="log-out" item-left></ion-icon>
+                Logout
+            </button>
+        </ion-list>
+    </ion-content>
+</ion-menu>
+
+<ion-nav [root]="rootPage" #nav></ion-nav>
